--- a/Youtube/youtube.css
+++ b/Youtube/youtube.css
@@ -63,7 +63,8 @@ body{
 }
 
 .left-section{
-  width:150px;
+  align-items: center;
+  display:flex;
 }
 
 .right-section{
@@ -76,5 +77,66 @@ body{
 .middle-section{
   flex:1;
   margin-left: 70px;
+  display: flex;
+  align-items: center;
+
+}
+
+.hamburger-menu
+{
+  height: 24px;
+  margin-left: 24px;
+  margin-right: 20px;
+}
+.youtube-logo{
+  height: 20px;
+}
+
+.search{
+  height: 40px;
+  width: 66px;
+  background-color: rgb(207, 207, 207);
+  border-width: 1px;
+  border-style: solid;
+  border-color: grey;
+  margin-left:-1px;
+  margin-right: 10px;
+}
+.voice-search
+{height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border:none;
+  background-color: grey;
+
+
+}
+
+.search-bar{
+  flex:1;
+  height: 36px;
+  padding-left:10px;
+  font-size: 15px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: grey;
+  border-radius: 2px;
+  box-shadow: inset 1px 2px 5px rgba(0,0,0,0.05);
+
+}
+
+.search-bar::placeholder{
+  font-family: Roboto, Arial;
+  font-size:16px;
+}
+
+.search-icon{
+  height:25px;
+  margin-top: 7px;
+}
+.voice-search-icon{
+  height:24px;
+  margin-top: 4px;
+  background-color: grey;
 
 }
